--- a/yixue-admin/pom.xml
+++ b/yixue-admin/pom.xml
@@ -18,6 +18,19 @@
     </properties>
 
     <dependencies>
+        <!--代码生成器-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.yilin</groupId>
             <artifactId>yixue-utils</artifactId>
