--- a/yixue-model/pom.xml
+++ b/yixue-model/pom.xml
@@ -36,7 +36,17 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.10.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <!-- 如果在使用自带tomcat请注释下面，如果使用第三方tomcat不要注释下面 -->
+            <!--  <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions> -->
+        </dependency>
     </dependencies>
 
 </project>
