--- a/yixue-gateway/pom.xml
+++ b/yixue-gateway/pom.xml
@@ -56,7 +56,7 @@
                 <version>2.6.13</version>
                 <configuration>
                     <!-- 指定该Main Class为全局的唯一入口 -->
-                    <mainClass>com.moxi.mogublog.gateway.GateWayApplication</mainClass>
+                    <mainClass>com.yilin.yixueblog.gateway.GatewayApplication</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
@@ -67,25 +67,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--docker镜像build插件-->
-<!--            <plugin>-->
-<!--                <groupId>com.spotify</groupId>-->
-<!--                <artifactId>docker-maven-plugin</artifactId>-->
-<!--                <version>1.2.0</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash; 注意imageName一定要是符合正则[a-z0-9-_.]的，否则构建不会成功 &ndash;&gt;-->
-<!--                    <imageName>registry.cn-shenzhen.aliyuncs.com/mogublog/${project.artifactId}</imageName>-->
-<!--                    <dockerDirectory>${project.basedir}/src/main/resources</dockerDirectory>-->
-<!--                    <rm>true</rm>-->
-<!--                    <resources>-->
-<!--                        <resource>-->
-<!--                            <targetPath>/</targetPath>-->
-<!--                            <directory>${project.build.directory}</directory>-->
-<!--                            <include>${project.build.finalName}.jar</include>-->
-<!--                        </resource>-->
-<!--                    </resources>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
         </plugins>
     </build>
 
