--- a/yixue-admin/src/main/resources/bootstrap.yaml
+++ b/yixue-admin/src/main/resources/bootstrap.yaml
@@ -8,7 +8,7 @@ spring:
   cloud:
     nacos:
       username: nacos
-      password: nacos
+      password: chen1178990518
       discovery:
         server-addr: 1.12.236.238:8848
         namespace: dev
